--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "satellizer": "^0.14.0",
     "socket.io": "^1.4.5",
     "socket.io-client": "^1.4.5",
-    "swiper": "^3.3.1",
+    "swiper": "3.3.1",
     "vinyl-map": "^1.0.1",
     "vinyl-paths": "^2.1.0"
   }
